--- a/index.html
+++ b/index.html
@@ -100,44 +100,40 @@
           <h2 class="major">Welcome!</h2>
           <span class="image main"><img src="images/heny.jpg" alt="" /></span>
           <p>
-            <b>Hello! I'm Hengameh</b> a self-learning and passionate coder and
-            designer with experience in project management and customer
-            persuasion.
+            <b>Hello! I'm Hengameh</b> a passionate Data Analyst and Engineer
+            with a proven track record in harnessing AI and NLP to extract
+            actionable insights from complex datasets.
           </p>
           <p>
-            I specialize in developing innovative solutions through machine
-            learning models and data analysis.
+            With a solid foundation in Python, SQL, and data visualization tools
+            such as Tableau and Power BI, I excel in transforming data into
+            strategic business solutions.
           </p>
           <p>
-            Currently, my main focus is working on full-stack projects for AI
-            that involve extracting data from websites and building predictive
-            or recommendation systems.
+            My career spans diverse industries—from creating AI-driven marketing
+            strategies for restaurants and contractors to pioneering healthcare
+            innovations with the Oheal app.
           </p>
           <p>
-            In addition, I'm developing an AI algorithm to find the relation
-            between animals' genes and fitness factors, and I plan to create a
-            psychology application that explores the relationship between
-            natural laws and human emotions.
+            I thrive on leveraging cutting-edge technologies to drive impactful
+            outcomes, all while maintaining a commitment to ethical standards
+            and regulatory compliance.
           </p>
           <p>
-            My expertise includes supervised and unsupervised algorithms,
-            natural language processing, reinforcement learning, deep learning
-            (CNN, RNN, LSTM), Python, AWS, Apache Spark, and various programming
-            languages and databases such as JavaScript, Java, Node.js, SQL, and
-            NoSQL.
+            <b>Skills Highlights:</b>
           </p>
-          <p>
-            <b>My Knowledges</b>
-          </p>
-          Supervised and Unsupervised algorithms
-          <br />Natural Language Processing <br />Reinforcement Learning
-          <br />Deep learning (CNN, RNN, LSTM, ...) <br />Python (coding, web
-          scraping, API, ...) <br />AWS (storage, translation, boto3, ...)
-          <br />Apache Spark and pyspark <br />Making Chatbots with seq2eq, API,
-          RASA, NLP <br />Work with Javascript, Java, Android, Node.js, Express,
-          Angular, React, C#, … <br />Work with Databases: Unix/ Linux, Oracle,
-          SQL, NoSQL, PL/SQL, MySQL, MongoDB, serverless
+          Programming Languages and Coding:
+          <br />Python (TensorFlow, NLTK, Scikit-learn, BeautifulSoup, Pyspark),
+          R, SAS
           <br />
+          Data Visualization:
+          <br />Tableau, PowerBI, Matplotlib, Seaborn, SAS Visual Analytics<br />Cloud
+          Platforms: <br />AWS (S3, Lambda, Rekognition, Comprehend), Azure,
+          Google Cloud Platform (GCP)
+          <br />
+          Databases: <br />NoSQL, SQL, PL-SQL
+          <br />
+
           <button
             class="btn btn-resume"
             onclick=" window.open('https://letsdesign.ca/Data%20Analyst%20Engineer.pdf','_blank')"
