--- a/index.html
+++ b/index.html
@@ -122,16 +122,15 @@
           <p>
             <b>Skills Highlights:</b>
           </p>
-          Programming Languages and Coding:
-          <br />Python (TensorFlow, NLTK, Scikit-learn, BeautifulSoup, Pyspark),
-          R, SAS
+          <b>Programming Languages and Coding:</b> Python (TensorFlow, NLTK,
+          Scikit-learn, BeautifulSoup, Pyspark), R, SAS
           <br />
-          Data Visualization:
-          <br />Tableau, PowerBI, Matplotlib, Seaborn, SAS Visual Analytics<br />Cloud
-          Platforms: <br />AWS (S3, Lambda, Rekognition, Comprehend), Azure,
-          Google Cloud Platform (GCP)
+          <b>Data Visualization:</b> Tableau, PowerBI, Matplotlib, Seaborn, SAS
+          Visual Analytics<br />
+          <b>Cloud Platforms:</b> AWS (S3, Lambda, Rekognition, Comprehend),
+          Azure, Google Cloud Platform (GCP)
           <br />
-          Databases: <br />NoSQL, SQL, PL-SQL
+          <b>Databases:</b>NoSQL, SQL, PL-SQL
           <br />
 
           <button
