--- a/index.html
+++ b/index.html
@@ -122,15 +122,16 @@
           <p>
             <b>Skills Highlights:</b>
           </p>
-          <b>Programming Languages and Coding:</b> Python (TensorFlow, NLTK,
-          Scikit-learn, BeautifulSoup, Pyspark), R, SAS
+          <b>Programming Languages and Coding:</b> <br />
+          Python (TensorFlow, NLTK, Scikit-learn, BeautifulSoup, Pyspark), R,
+          SAS
           <br />
-          <b>Data Visualization:</b> Tableau, PowerBI, Matplotlib, Seaborn, SAS
-          Visual Analytics<br />
-          <b>Cloud Platforms:</b> AWS (S3, Lambda, Rekognition, Comprehend),
-          Azure, Google Cloud Platform (GCP)
+          <b>Data Visualization:</b> <br />Tableau, PowerBI, Matplotlib,
+          Seaborn, SAS Visual Analytics<br />
+          <b>Cloud Platforms:</b> <br />AWS (S3, Lambda, Rekognition,
+          Comprehend), Azure, Google Cloud Platform (GCP)
           <br />
-          <b>Databases:</b>NoSQL, SQL, PL-SQL
+          <b>Databases:</b><br /><t>NoSQL, SQL, PL-SQL</t>
           <br />
 
           <button
