--- a/index.html
+++ b/index.html
@@ -122,16 +122,16 @@
           <p>
             <b>Skills Highlights:</b>
           </p>
-          <b>Programming Languages and Coding:</b> <br />
-          Python (TensorFlow, NLTK, Scikit-learn, BeautifulSoup, Pyspark), R,
-          SAS
+          <b>Programming Languages and Coding:</b>
+          <br />&nbsp;&nbsp;&nbsp;&nbsp; Python (TensorFlow, NLTK, Scikit-learn,
+          BeautifulSoup, Pyspark), R, SAS
           <br />
-          <b>Data Visualization:</b> <br />Tableau, PowerBI, Matplotlib,
-          Seaborn, SAS Visual Analytics<br />
-          <b>Cloud Platforms:</b> <br />AWS (S3, Lambda, Rekognition,
-          Comprehend), Azure, Google Cloud Platform (GCP)
+          <b>Data Visualization:</b> <br />&nbsp;&nbsp;&nbsp;&nbsp;Tableau,
+          PowerBI, Matplotlib, Seaborn, SAS Visual Analytics<br />
+          <b>Cloud Platforms:</b> <br />&nbsp;&nbsp;&nbsp;&nbsp;AWS (S3, Lambda,
+          Rekognition, Comprehend), Azure, Google Cloud Platform (GCP)
           <br />
-          <b>Databases:</b><br /><t>NoSQL, SQL, PL-SQL</t>
+          <b>Databases:</b><br />&nbsp;&nbsp;&nbsp;&nbsp;NoSQL, SQL, PL-SQL
           <br />
 
           <button
