--- a/index.html
+++ b/index.html
@@ -96,9 +96,10 @@
       <!-- Main -->
       <div id="main">
         <!-- Intro -->
-        <article id="intro" style="letter-spacing: 1px">
-          <h2 class="major">Welcome!</h2>
-          <span class="image main"><img src="images/heny.jpg" alt="" /></span>
+        <article id="intro" style="text-align: center; letter-spacing: 1px">
+          <h2 class="major" style="display: inline-block">Welcome!</h2>
+          <br />
+          <span class="main"><img src="images/heny.jpg" alt="" /></span>
           <p>
             <b>Hello! I'm Hengameh</b> a passionate Data Analyst and Engineer
             with a proven track record in harnessing AI and NLP to extract
@@ -119,25 +120,24 @@
             outcomes, all while maintaining a commitment to ethical standards
             and regulatory compliance.
           </p>
-          <p>
-            <b>Skills Highlights:</b>
-          </p>
-          <b>Programming Languages and Coding:</b>
-          <br />&nbsp;&nbsp;&nbsp;&nbsp; Python (TensorFlow, NLTK, Scikit-learn,
-          BeautifulSoup, Pyspark), R, SAS
+          <h2 class="major" style="display: inline-block">Skills Highlights</h2>
           <br />
-          <b>Data Visualization:</b> <br />&nbsp;&nbsp;&nbsp;&nbsp;Tableau,
-          PowerBI, Matplotlib, Seaborn, SAS Visual Analytics<br />
-          <b>Cloud Platforms:</b> <br />&nbsp;&nbsp;&nbsp;&nbsp;AWS (S3, Lambda,
-          Rekognition, Comprehend), Azure, Google Cloud Platform (GCP)
+          <b>Programming Languages and Coding</b>
           <br />
-          <b>Databases:</b><br />&nbsp;&nbsp;&nbsp;&nbsp;NoSQL, SQL, PL-SQL
-          <br />
+          Python (TensorFlow, NLTK, Scikit-learn, BeautifulSoup, Pyspark), R,
+          SAS
+          <br /><br />
+          <b>Data Visualization</b>
+          <br />Tableau, PowerBI, Matplotlib, Seaborn, SAS Visual Analytics<br /><br />
+          <b>Cloud Platforms</b>
+          <br />AWS (S3, Lambda, Rekognition, Comprehend), Azure, Google Cloud
+          Platform (GCP) <br /><br />
+          <b>Databases</b><br />NoSQL, SQL, PL-SQL <br /><br />
 
           <button
             class="btn btn-resume"
             onclick=" window.open('https://letsdesign.ca/Data%20Analyst%20Engineer.pdf','_blank')"
-            style="margin: 30px"
+            style="margin: 5% 35%"
           >
             See My Resume
           </button>
