--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
         height: 1px;
         border-bottom: 1px dotted rgb(145, 145, 145);
       }
+      div.bold_desc {
+        font-size: 24px;
+      }
     </style>
   </head>
   <body class="is-preload">
@@ -148,7 +151,7 @@
           <h2 class="major">Projects</h2>
           <div class="Project_images">
             <div class="gallery">
-              <div class="bold_desc">Detecting Fraudulent Job Postings</div>
+              <div class="bold_desc">Streamlining Healthcare with AI</div>
 
               <div class="desc">
                 <div class="text">
