--- a/index.html
+++ b/index.html
@@ -150,6 +150,39 @@
         <article id="projects">
           <h2 class="major">Projects</h2>
           <div class="Project_images">
+
+			  <div class="gallery">
+              <div class="bold_desc">Automated Clinical Capacity Dashboard: A Revit-to-Power BI Digital Twin</div>
+
+              <div class="desc">
+                <div class="text">
+                  I developed a custom data pipeline to bridge the gap between a 2-story hospital model and an executive-level Power BI dashboard. By writing a Python-based extraction tool in pyRevit, I automated the collection of spatial data (Room Areas, Departments) and clinical equipment (Bed Counts). The project features a live 3D Digital Twin connection via Autodesk Data Exchange, allowing stakeholders to interactively audit ward density and hospital performance metrics directly through the 3D model geometry.
+                  <!-- <p>
+                    <a class="git" target="_blank">Startup Project</a>
+                  </p> -->
+                </div>
+                <div class="image">
+                  <img src="images/Dash.jpg" alt="Project Image" />
+                </div>
+              </div>
+            </div>
+
+			  <div class="gallery">
+              <div class="bold_desc">Worldwide Skyscrapers Analysis Dashboard</div>
+
+              <div class="desc">
+                <div class="text">
+					This Excel dashboard provides a comprehensive analysis of skyscrapers around the world using Pivot Tables and interactive visuals. It highlights key insights such as the distribution of skyscrapers by country and city, building height comparisons, construction status, and year-over-year trends. Users can explore the data dynamically through slicers and filters, enabling quick comparisons and data-driven insights into global skyscraper development patterns.
+                  <!-- <p>
+                    <a class="git" target="_blank">Startup Project</a>
+                  </p> -->
+                </div>
+                <div class="image">
+                  <img src="images/Dash.jpg" alt="Project Image" />
+                </div>
+              </div>
+            </div>
+			  
             <div class="gallery">
               <div class="bold_desc">Streamlining Healthcare with AI</div>
 
@@ -480,3 +513,4 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
