--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                   </p> -->
                 </div>
                 <div class="image">
-                  <img src="images/Dash.jpg" alt="Project Image" />
+                  <img src="images/excel.jpg" alt="Project Image" />
                 </div>
               </div>
             </div>
@@ -513,4 +513,5 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
