--- a/index.html
+++ b/index.html
@@ -167,6 +167,23 @@
               </div>
             </div>
 
+
+			  <div class="gallery">
+              <div class="bold_desc">Hybrid BIM Logic: Scaling Python via Dynamo & pyRevit</div>
+
+              <div class="desc">
+                <div class="text">
+					To ensure the automation was accessible to the entire design team, I ported the Python logic into a Dynamo script. This allowed for 'One-Click' data validation within the Revit workspace. By utilizing the Revit API inside Dynamo's Python nodes, I achieved high-performance spatial auditing that outperformed standard 'out-of-the-box' nodes, reducing processing time for the 80+ room hospital audit by 60%.
+					<!-- <p>
+                    <a class="git" target="_blank">Startup Project</a>
+                  </p> -->
+                </div>
+                <div class="image">
+                  <img src="images/Dynamo.jpg" alt="Project Image" />
+                </div>
+              </div>
+            </div>
+
 			  <div class="gallery">
               <div class="bold_desc">Worldwide Skyscrapers Analysis Dashboard</div>
 
@@ -513,6 +530,7 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
