--- a/index.html
+++ b/index.html
@@ -168,6 +168,23 @@
             </div>
 
 
+			   <div class="gallery">
+              <div class="bold_desc">React-Based Digital Design & Development Platform</div>
+
+              <div class="desc">
+                <div class="text">
+					This website is a modern, responsive digital platform built with React and Next.js, designed and developed from scratch to showcase professional web design, development, and creative solutions. The project leverages component-based architecture, API-driven pages, and Tailwind CSS for scalable styling and performance optimization. Key features include dynamic routing, user authentication, admin and customer panels, and modular page structure, demonstrating both UI/UX design expertise and full-stack front-end development capabilities.
+                  <!-- <p>
+                    <a class="git" target="_blank">Startup Project</a>
+                  </p> -->
+                </div>
+                <div class="image">
+                  <img src="images/website.jpg" alt="Project Image" />
+                </div>
+              </div>
+            </div>
+
+
 			  <div class="gallery">
               <div class="bold_desc">Hybrid BIM Logic: Scaling Python via Dynamo & pyRevit</div>
 
@@ -530,6 +547,7 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
