--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                   </p> -->
                 </div>
                 <div class="image">
-                  <img src="images/website.jpg" alt="Project Image" />
+                  <img src="images/LDwebsite.jpg" alt="Project Image" />
                 </div>
               </div>
             </div>
@@ -547,6 +547,7 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
