--- a/index.html
+++ b/index.html
@@ -152,6 +152,24 @@
           <div class="Project_images">
 
 			  <div class="gallery">
+              <div class="bold_desc">Hospital Facility Intelligence: Real-Time Revit-to-BI Analytics</div>
+
+              <div class="desc">
+                <div class="text">
+					I developed a high-performance BIM Digital Twin Dashboard that synchronizes Revit spatial data with interactive 3D geometry for hospital facility management. Utilizing a custom Python (pyRevit) pipeline, I extracted 84 clinical zones and established a relational data model to map architectural 'anchors'—like doors and beds—directly to a cloud-based 3D viewer. The result is a futuristic, Glassmorphism-styled interface that allows stakeholders to audit clinical density and spatial program compliance in real-time. By implementing bi-directional cross-filtering and advanced DAX measures, I transformed static BIM models into a dynamic decision-making tool that ensures 100% data integrity across complex medical environments.
+                  <!-- <p>
+                    <a class="git" target="_blank">Startup Project</a>
+                  </p> -->
+                </div>
+                <div class="image">
+					<source srcset="images/f1.webp" type="image/webp">
+  <img src="images/f1.jpg" alt="Description of the image" width="500" height="300">
+                </div>
+              </div>
+            </div>
+
+
+			  <div class="gallery">
               <div class="bold_desc">Automated Clinical Capacity Dashboard: A Revit-to-Power BI Digital Twin</div>
 
               <div class="desc">
@@ -547,6 +565,7 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
