--- a/index.html
+++ b/index.html
@@ -162,8 +162,7 @@
                   </p> -->
                 </div>
                 <div class="image">
-					<source srcset="images/f1.webp" type="image/webp">
-  <img src="images/f1.jpg" alt="Description of the image" width="500" height="300">
+					<img src="images/f1.gif" alt="Project Image" />
                 </div>
               </div>
             </div>
@@ -565,6 +564,7 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
