Update project link for AI Healthcare Assistant

--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
             data-title="AI Healthcare Assistant"
             data-desc="Oheal is a cutting-edge health app to streamline medical care. Users can schedule appointments with doctors and specialists, access test results and records, and message healthcare providers directly. The app also manages medications, offering reminders for optimal intake times. Utilizing AI, Oheal analyzes user data to suggest potential health issues and prevents misdiagnoses by comparing symptoms with similar cases."
             data-core="Python, NLP, Scikit-learn, Flask"
-            data-link="https://github.com/HannahTech?tab=repositories"
+            data-link="https://github.com/HannahTech/Oheal-ai-healthcare-assistant"
           />
           <span class="projects-thumb-title">AI Healthcare Assistant</span>
         </div>
